--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3modal/wagmi": "^5.0.6",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "viem": "^2.17.3",
     "wagmi": "^2.10.10",
