--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
+    "react-syntax-highlighter": "^15.5.0",
     "viem": "^2.17.3",
     "wagmi": "^2.10.10",
     "web3": "^4.10.0"
