--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "start": "node src/api/server.js",
-    "dev": "vite",
-    "dev:server": "node src/api/server.js",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\""
-  },
+"scripts": {
+  "start": "node src/api/server.js",
+  "dev": "vite",
+  "dev:server": "node src/api/server.js",
+  "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\"",
+  "build": "vite build",
+  "build:server": "tsc", 
+  "build:all": "npm run build && npm run build:server"
+},
   "dependencies": {
     "@anon-aadhaar/react": "^2.2.3",
     "@tanstack/react-query": "^5.50.1",
